src/yini_test/cases/golden/strict/valid/strings/explicit-raw-string.strict.yini
@yini strict

^ Strings
path = R"C:\Users\demo\AppData\Local"
pattern = R"\d+\s+\w+"

/END
