src/yini_test/cases/golden/strict/invalid/strings/unterminated-string.strict.yini
@yini strict

^ Strings
message = "this string never closes

/END
